# Ingredion

./: LLM_Ingredion.ipynb  PDFParseTest.ipynb  README.md  extraction.py  gemini_extraction.py  main.py  prompting.py  pyproject.toml  structure.py  test.py
app/: main.py  requirements.txt
app/data/cached_json/: Pepsico Sustainability 2024.json
app/data/extracted_results/: Ingredion 2024 Sustainability Report.csv  Ingredion-test.csv  Pepsico Sustainability 2024.pdf.csv
app/extractor/: __init__.py  compare_metrics.py  gemini_extractor.py  pdf_parser.py  structure_helper.py  test.py
backend/: .gitignore  main.py
backend/routers/: extract.py  upload.py
backend/services/: compare_metrics.py  gemini_extractor.py  pdf_splitter.py
csv_results/: Ingredion 2024 Sustainability Report.csv  Ingredion 2024 Sustainability ReportGemini.csv
frontend/app/: layout.tsx  page.tsx
frontend/app/(portal)/: layout.tsx
frontend/app/(portal)/dashboard/: page.tsx
frontend/app/(portal)/upload/: page.tsx
json_results/: Ingredion 2024 Sustainability Report.json
